After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 706823 - videoconvert: generic conversion produces artifacts
videoconvert: generic conversion produces artifacts
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-base
git master
Other All
: Normal major
: 1.1.90
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2013-08-26 18:48 UTC by Matej Knopp
Modified: 2013-09-18 16:48 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Matej Knopp 2013-08-26 18:48:36 UTC
Generic format conversion (that isn't handled by fast path) seems to produce artifacts.

command to reproduce:

gst-launch-1.0 videotestsrc ! video/x-raw, format=I420 ! videoconvert ! video/x-raw, format=YV12 ! videoconvert ! autovideosink

on related note, is there a reason why there is fast path for I420 but not YV12?
Comment 1 Sebastian Dröge (slomo) 2013-08-27 08:11:27 UTC
Because nobody added one (although it would be trivial) :)

I can confirm this here, interesting pattern.
Comment 2 Wim Taymans 2013-09-03 10:14:42 UTC
Something is wrong with the chroma subsampling and how it picks the lines, it somehow reorders them.
Comment 3 Wim Taymans 2013-09-03 13:46:02 UTC
commit 10b3b88e9cc414fd8fce6f1545b55f43c28d0396
Author: Wim Taymans <wim.taymans@collabora.co.uk>
Date:   Tue Sep 3 15:42:44 2013 +0200

    videoconvert: fix handling of chroma resample
    
    Increase the number of temporary lines that we need, it is possible that the
    up and downsampling offsets are out of phase and that we need to keep some
    extra lines around. Also copy the unhandled output lines for the next round
    instead of overwriting them.
    
    Fixes https://bugzilla.gnome.org/show_bug.cgi?id=706823
Comment 4 Mathieu Duponchelle 2013-09-03 14:17:59 UTC
Nice :)